# mini-guardian

./: Cargo.toml  README.md  regex.json
src/: github.rs  main.rs  patterns.rs  reporter.rs  scanner.rs
