[package]
name = "mini_guardian"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
dotenv = "0.15.0"
octocrab = "0.48.1"
regex = "1.12.2"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
walkdir = "2.5.0"
